--- a/.github/workflows/ballerina-central.yml
+++ b/.github/workflows/ballerina-central.yml
@@ -7,10 +7,11 @@
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install Docker
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+      #- name: Install Docker
+      #  id: buildx
+      #  uses: docker/setup-buildx-action@v1
 
       - name: Run Script
+        working-directory: ./test-scripts
         run: ls
 
