--- a/.github/workflows/ballerina-central.yml
+++ b/.github/workflows/ballerina-central.yml
@@ -7,11 +7,14 @@
       - name: Checkout
         uses: actions/checkout@v2
 
-      #- name: Install Docker
-      #  id: buildx
-      #  uses: docker/setup-buildx-action@v1
+      - name: Install Docker
+        id: buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Run Script
         working-directory: ./test-scripts/ballerina-central/
-        run: docker build .
+        env:
+          BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_BOT_USERNAME }}
+          TEST_ORGANIZATION ${{ secrets.BALLERINA_BOT_TOKEN }}
+        run: docker build --build-arg BALLERINA_CENTRAL_ACCESS_TOKEN="a8764443-1782-3736-b79b-5fb7c01d3ee8" .
 
