--- a/.github/workflows/ballerina-central.yml
+++ b/.github/workflows/ballerina-central.yml
@@ -15,6 +15,6 @@
         working-directory: ./test-scripts/ballerina-central/
         env:
           BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_BOT_USERNAME }}
-          TEST_ORGANIZATION ${{ secrets.BALLERINA_BOT_TOKEN }}
+          TEST_ORGANIZATION: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: docker build --build-arg BALLERINA_CENTRAL_ACCESS_TOKEN="a8764443-1782-3736-b79b-5fb7c01d3ee8" .
 
