--- a/.github/workflows/ballerina-central.yml
+++ b/.github/workflows/ballerina-central.yml
@@ -16,5 +16,5 @@
         #env:
         #  BALLERINA_CENTRAL_ACCESS_TOKEN: ${{ secrets.BALLERINA_BOT_USERNAME }}
         #  TEST_ORGANIZATION: ${{ secrets.BALLERINA_BOT_TOKEN }}
-        run: docker build --build-arg BALLERINA_CENTRAL_ACCESS_TOKEN=${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }} .
-
+        #run: docker build --build-arg BALLERINA_CENTRAL_ACCESS_TOKEN=${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }} .
+        run: echo ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
